--- a/oss.html
+++ b/oss.html
@@ -11,16 +11,67 @@
     <title>KW-Plan-Manager</title>
     <style>
         /* CSS Code */
+        .container {
+            width: 640px;
+        }
     </style>
 </head>
 
 <body>
     <!-- HTML Code -->
+    <!-- As a heading -->
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1">KW-Plan-Manager</span>
+            <i class="bi bi-card-checklisht"></i>
+            kw-plan-manager
+        </div>
+    </nav>
+
+    <div class="contatiner">
+        <div class="d-flex align-items-center mb-2 mt-2">
+            <input type="text" class="form-control" id="plan-input" placeholder="Enter a plan here">
+            <button type="button" id="add-btn" class="btn btn-primary ms-1 text-nowrap">
+                <i class="bi bi-plus"></i>
+                Add
+            </button>
+        </div>
+
+        <div class="d-flex">
+            <div class="w-50 bg-light rounded-2 p-2 me-1">
+                <h3>Plans</h3>
+                <div id="plan-list">
+                    <div class="plan bg-light p-1 rounded-2 ps-2">Sample plan</div>
+                </div>
+            </div>
+
+            <div class="w-50 bg-light rounded-2 p-2">
+                <h3>Done</h3>
+                <div id="done-list">
+
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
         /* JS Code */
+        let addBtn = document.querySelector("#add-btn");
+        addBtn.addEventListener("click", () => {
+            let input = document.querySelector("#plan-input");
+            let plan = input.value;
+
+            // if (!plan) return;
+            let newPlan = document.createElement(div);
+            newPlan.classList.add("plan", "bg-light", "p-1", "rounded-2", "ps-2");
+            newPlan.textContent = plan;
+            let planList = document.querySelector("#plan-list");
+            planList.appendChild(newPlan);
+
+            input.value = "";
+        });
     </script>
 </body>
 
